--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	<title>Document</title>
 </head>
 <body>
-	<script src="js/bundle.js"></script>
+	<script src="js-dist/bundle.js"></script>
 </body>
 </html>
